add_subdirectory(metadata-mapping)
add_subdirectory(debug-sink)
add_subdirectory(renumber-healpix)
add_subdirectory(statistics)
add_subdirectory(aggregate)
add_subdirectory(transport)
add_subdirectory(sink)
add_subdirectory(encode)
add_subdirectory(single-field-sink)
add_subdirectory(print)
add_subdirectory(mask)
add_subdirectory(null)
add_subdirectory(interpolate)
add_subdirectory(interpolate-fesom)
add_subdirectory(select)
add_subdirectory(scale)
